<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Conta Fácil</string>
    <string name="sign_up_screen_label">CADASTRO</string>
    <string name="sign_up_photo_label">ADICIONE SUA FOTO</string>
    <string name="login_process">You are being logged in...</string>
    <string name="sign_up_name_label">Nome</string>
    <string name="sign_up_cpf_label">Digite o número do CPF</string>
    <string name="sign_up_create_pincode">Crie uma senha de 4 digitos numéricos</string>
    <string name="sign_up_create_account_label">CRIAR MINHA CONTA</string>
    <string name="sign_up_already_account_label">JÁ SOU CADASTRADO</string>
    <string name="log_in_screen_label">FAÇA O LOGIN</string>
    <string name="log_in_name_label">Nome</string>
    <string name="log_in_pincode_label">Senha</string>
    <string name="log_in_enter_label">ENTRAR</string>
    <string name="log_in_forget_password_label">ESQUECEU SUA SENHA?</string>
    <string name="log_in_no_account_label">AINDA NÃO TENHO UMA CONTA</string>
    <string name="main_screen_user_name">ESPETINHOS DA ANA</string>
    <string name="sell_event_label">VENDAS</string>
    <string name="buy_event_label">COMPRAS</string>
    <string name="recur_expenses_button_label">DESPESAS MENSAIS</string>
    <string name="reports_button_label">RELATÓRIO</string>
    <string name="add_buy_event_label">ADICIONAR COMPRA</string>
    <string name="total_label">TOTAL</string>
    <string name="inform_purchase_value_label">Informe o valor total da compra:</string>
    <string name="value_label">VALOR</string>
    <string name="payment_date_label">DATA DE \nPAGAMENTO</string>
    <string name="payment_date_single_label">DATA DE PAGAMENTO</string>
    <string name="payment_method_label">FORMA DE \nPAGAMENTO</string>
    <string name="establishment_name_label">ESTABELECIMENTO</string>
    <string name="observation_notes_label">ANOTAÇÃO:</string>
    <string name="add_establishment_label">+ ADICIONAR ESTABELECIMENTO</string>
    <string name="add_product_label">+ ADICIONAR PRODUTO</string>
    <string name="add_categoires_label">+ ADICIONAR CATEGORIA</string>
    <string name="new_establishment_label">NOVO ESTABELECIMENTO</string>
    <string name="cancel_label">Cancelar</string>
    <string name="add_label">Adicionar</string>
    <string name="add_photo_screen_label">ADICIONAR FOTO DO CUPOM FISCAL</string>
    <string name="take_photo_button_label">TIRAR FOTO DO CUPOM FISCAL</string>
    <string name="edit_photo_button_label">ADICIONAR FOTO DO CUPOM FISCAL</string>
    <string name="skip_photo_button_label">PULAR ESTE PASSO E ADICIONAR A COMPRA</string>
    <string name="buy_event_details_label">DETALHE DA COMPRA</string>
    <string name="edit_buy_event_label">EDITAR COMPRA</string>
    <string name="visualize_photo_button_label">VISUALIZAR CUPOM FISCAL</string>
    <string name="delete_buy_button_label">DELETAR COMPRA</string>
    <string name="save_button_label">SALVAR</string>
    <string name="add_sell_event_label">ADICIONAR VENDA</string>
    <string name="quantity_label">QUANTIDADE</string>
    <string name="product_type_label">PRODUTO</string>
    <string name="receipt_date_label">DATA DE \nRECEBIMENTO</string>
    <string name="new_categories_label">NOVA CATEGORIA</string>
    <string name="new_product_label">NOVO PRODUTO</string>
    <string name="details_sold_product_label">DETALHE DA VENDA</string>
    <string name="delete_sell_product_label">DELETAR VENDA</string>
    <string name="edit_sell_product_label">EDITAR VENDA</string>
    <string name="expenses_head_label">DESPESAS</string>
    <string name="add_expenses_label">ADICIONAR DESPESA</string>
    <string name="inform_expense_value_label">Informe o valor total da despesa:</string>
    <string name="categoria_text_label">CATEGORIA</string>
    <string name="due_date_label">DATA DE VENCIMENTO</string>
    <string name="due_date_label_nodot">DATA DE VENCIMENTO:</string>
    <string name="periodicity_label">PERIODICIDADE</string>
    <string name="expenses_details_label">DETALHE DA DESPESA</string>
    <string name="delete_expenses_label">DELETAR DESPESA</string>
    <string name="result_screen_label">RESULTADO</string>
    <string name="periodicity_dia_label">DIA</string>
    <string name="periodicity_semana_label">SEMANA</string>
    <string name="periodicity_mes_label">MÊS</string>
    <string name="periodicity_ano_label">ANO</string>
    <string name="vendas_dollar_title">VENDAS(R$)</string>
    <string name="compras_dollar_title">COMPRAS(R$)</string>
    <string name="expenses_result_title">DESPESA DO PERÍODO(R$)</string>
    <string name="surplus_text_title">SALDO DO\nPERÍODO</string>
    <string name="final_result_title">SOBRA</string>
    <string name="login_internet_alert_dialog">Você precisa ter acesso a internet para realizar o primeiro acesso</string>
    <string name="incorrect_password_alert_message">Senha incorreta</string>
    <string name="no_offline_record_alert_message">Dados não encontrados no aplicativo. Por favor habilite sua conexão com a internet</string>
    <string name="signup_internet_alert_dialog">Você precisa de uma conexão com a internet para reaizar o cadastro.</string>
    <string name="signup_valid_data_alert">Dados inválidos. Verifique os campos e tente novamente.</string>
    <string name="signup_invalid_data_alert">Dados inválidos. Verifique o CPF/CNPJ e tente novamente.</string>
    <string name="error_server_alert">Esse usuário não pode ser cadastrado.</string>
    <string name="no_server_record_alert_messageo">Usuário não encontrado. Por favor realize o cadastro.</string>
    <string name="user_not_exists_alert">Falha na autenticação. Verifique se inseriu os dados corretos e tente novamente.</string>
    <string name="user_not_exists_title">Usuário inválido</string>
    <string name="invalid_alert_data_title">Dados Inválidos</string>
    <string name="inital_data_invalid_title">Erro crítico</string>
    <string name="inital_data_invalid">Ocorreu um erro ao baixar os dados do servidor. Certifique-se que está conectado na internet e tente novamente. Se o erro persistir, contate o suporte do aplicativo.</string>
    <string name="connect_alert_title">Conecte na internet</string>
    <string name="error_alert_title">Erro</string>
    <string name="sync_button_label">CÓPIA DE SEGURANÇA</string>
    <string name="pass_alert_title">Recuperar senha</string>
    <string name="add_quantity_alert_title">Quantidade</string>
    <string name="syn_alert_title">Sincronizar dados</string>
    <string name="syn_alert_message">Dados não encontrados no aplicativo. Por favor habilite sua conexão com a internet</string>
    <string name="retrieve_pass_alert_msg">Envie um email para senha@contafacil.com.br informando o seu CPF/CNPJ para recuperar a sua senha.</string>
    <string name="delete_venda_alert_title">Deletar esta venda?</string>
    <string name="delete_venda_alert_message">Você tem certeza que deseja \ndeletar esta venda? Você irá \nperder estes dados.</string>
    <string name="delete_compras_alert_title">Deletar esta compra?</string>
    <string name="delete_compras_alert_message">Você tem certeza que deseja \ndeletar esta compra? Você irá \nperder estes dados.</string>
    <string name="delete_expense_alert_title">Deletar esta despesa?</string>
    <string name="delete_expense_alert_message">Você tem certeza que deseja \ndeletar esta despesa? Você irá \nperder estes dados.</string>
    <string name="invalid_json">Ocorreu algo de errado</string>
    <string name="aguarde_adicionado">Aguarde! Adicionando o evento</string>
    <string name="aguarde_salvo">Aguarde! Atualizando o evento</string>
    <string name="aguarde_apagado">Aguarde! Apagando o evento</string>
    <string name="invlaid_date_title">Data Inválida</string>
    <string name="invlaid_date_message">Por favor, selecione outra data de vencimento</string>
    <string name="sign_up_title">Cadastro relizado</string>
    <string name="sign_up_alert_message">Conta criada com Sucesso!</string>
    <string name="backup_already_sync">Todos os dados já estão sincronizados.</string>
    <string name="backup_sync_ok">Backup realizado com sucesso.</string>
    <string name="backup_sync_offline">É necessário conexão com a internet para realizar o backup.</string>
    <string name="photo_not_taken">A foto não foi tirada.</string>
    <string name="sync_day_message">Fazem mais de 24 horas que seus dados não foram sincronizados. Deseja sincronizar agora?</string>
    <string name="sync_day_alert">Cópia de Segurança</string>
     <string name="sync_added_message">Você possui dados que precisam ser salvos. Deseja salvar agora?</string>
</resources>