<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D2843" >

    <RelativeLayout
        android:id="@+id/scalingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/mainHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="120px" >

            <RelativeLayout
                android:id="@+id/center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal" >

                <ImageView
                    android:id="@+id/userPhoto"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_centerVertical="true"
                    android:src="@drawable/photo_placeholder" />

                <TextView
                    android:id="@+id/mainScreenUserNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@+id/userPhoto"
                    android:text="@string/main_screen_user_name"
                    android:textColor="#FFFFFF"
                    android:textSize="22dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="40px"
                android:layout_height="43px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="630px"
                android:background="@drawable/logout_button" />
        </RelativeLayout>

        <View
            android:id="@+id/separatorOne"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/mainHeaderLayout"
            android:background="#2F416C"
            android:tag="constantHeight" />

        <Button
            android:id="@+id/sellEventButton"
            android:layout_width="match_parent"
            android:layout_height="147px"
            android:layout_alignTop="@+id/separatorOne"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="61px"
            android:background="@drawable/sell_events_bg_selector"
            android:gravity="center"
            android:text="@string/sell_event_label"
            android:textColor="#014C3E"
            android:textSize="22dp" />

        <View
            android:id="@+id/separatorTwo"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignTop="@+id/sellEventButton"
            android:layout_marginTop="207px"
            android:background="#2F416C"
            android:tag="constantHeight" />

        <Button
            android:id="@+id/buyEventButton"
            android:layout_width="match_parent"
            android:layout_height="147px"
            android:layout_alignTop="@+id/separatorTwo"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="61px"
            android:background="@drawable/buy_event_red_bg_selector"
            android:gravity="center"
            android:text="@string/buy_event_label"
            android:textColor="#FFFFFF"
            android:textSize="22dp" />

        <Button
            android:id="@+id/expenseEventButton"
            android:layout_width="match_parent"
            android:layout_height="148px"
            android:layout_alignTop="@+id/buyEventButton"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="160px"
            android:background="@drawable/buy_event_red_bg_selector"
            android:gravity="center"
            android:text="@string/recur_expenses_button_label"
            android:textColor="#FFFFFF"
            android:textSize="22dp" />

        <View
            android:id="@+id/separatorThree"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignTop="@+id/expenseEventButton"
            android:layout_marginTop="226px"
            android:background="#2F416C"
            android:tag="constantHeight" />

        <Button
            android:id="@+id/reportsMainButton"
            android:layout_width="match_parent"
            android:layout_height="147px"
            android:layout_below="@+id/separatorThree"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="10px"
            android:background="@drawable/reports_button_bg_selector"
            android:gravity="center"
            android:text="@string/reports_button_label"
            android:textColor="#FFFFFF"
            android:textSize="22dp" />

        <RelativeLayout
            android:id="@+id/syncLayout"
            android:layout_width="660px"
            android:layout_height="88px"
            android:layout_below="@+id/reportsMainButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px"
            android:background="@drawable/blue_border_transp_center_bg" >

            <ImageView
                android:id="@+id/syncIcon"
                android:layout_width="43px"
                android:layout_height="43px"
                android:layout_marginLeft="50px"
                android:layout_centerVertical="true"
                android:background="@drawable/sync_button" />

            <TextView
                android:id="@+id/syncLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sync_button_label"
                android:textColor="#6199c9"
                android:textSize="18dp" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/dataLoadWaitBar"
            android:layout_width="250px"
            android:layout_height="250px"
            android:layout_below="@+id/waitProgressBarText"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/waitProgressBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainHeaderLayout"
            android:layout_centerHorizontal="true"
            android:text="Loading Data"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>